Fix sector select cutting off text in no js view

--- a/core/sass/custom-page.scss
+++ b/core/sass/custom-page.scss
@@ -93,7 +93,8 @@
 }
 
 #js-sector-select {
-  padding: $spacing-4;
+  height: $spacing-1;
+  width: 100%;
   // use text input carat instead of pointer
   cursor: initial;
   background-color: white;
